# serializer version: 1
# name: test_sensor[sensor.home_carbon_monoxide-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.home_carbon_monoxide',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'name': None,
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 0,
      }),
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Carbon monoxide',
    'platform': 'airly',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'co',
    'unique_id': '123-456-co',
    'unit_of_measurement': 'µg/m³',
  })
# ---
# name: test_sensor[sensor.home_carbon_monoxide-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'Data provided by Airly',
      'friendly_name': 'Home Carbon monoxide',
      'limit': 4000,
      'percent': 4,
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': 'µg/m³',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.home_carbon_monoxide',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '162.49',
  })
# ---
# name: test_sensor[sensor.home_common_air_quality_index-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.home_common_air_quality_index',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'name': None,
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 0,
      }),
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Common air quality index',
    'platform': 'airly',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'caqi',
    'unique_id': '123-456-caqi',
    'unit_of_measurement': 'CAQI',
  })
# ---
# name: test_sensor[sensor.home_common_air_quality_index-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'advice': 'Catch your breath!',
      'attribution': 'Data provided by Airly',
      'description': 'Great air here today!',
      'friendly_name': 'Home Common air quality index',
      'level': 'very low',
      'unit_of_measurement': 'CAQI',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.home_common_air_quality_index',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '7.29',
  })
# ---
# name: test_sensor[sensor.home_humidity-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.home_humidity',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'name': None,
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 1,
      }),
    }),
    'original_device_class': <SensorDeviceClass.HUMIDITY: 'humidity'>,
    'original_icon': None,
    'original_name': 'Humidity',
    'platform': 'airly',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '123-456-humidity',
    'unit_of_measurement': '%',
  })
# ---
# name: test_sensor[sensor.home_humidity-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'Data provided by Airly',
      'device_class': 'humidity',
      'friendly_name': 'Home Humidity',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': '%',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.home_humidity',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '68.35',
  })
# ---
# name: test_sensor[sensor.home_nitrogen_dioxide-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.home_nitrogen_dioxide',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'name': None,
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 0,
      }),
    }),
    'original_device_class': <SensorDeviceClass.NITROGEN_DIOXIDE: 'nitrogen_dioxide'>,
    'original_icon': None,
    'original_name': 'Nitrogen dioxide',
    'platform': 'airly',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '123-456-no2',
    'unit_of_measurement': 'µg/m³',
  })
# ---
# name: test_sensor[sensor.home_nitrogen_dioxide-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'Data provided by Airly',
      'device_class': 'nitrogen_dioxide',
      'friendly_name': 'Home Nitrogen dioxide',
      'limit': 25,
      'percent': 64,
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': 'µg/m³',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.home_nitrogen_dioxide',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '16.04',
  })
# ---
# name: test_sensor[sensor.home_ozone-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.home_ozone',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'name': None,
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 0,
      }),
    }),
    'original_device_class': <SensorDeviceClass.OZONE: 'ozone'>,
    'original_icon': None,
    'original_name': 'Ozone',
    'platform': 'airly',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '123-456-o3',
    'unit_of_measurement': 'µg/m³',
  })
# ---
# name: test_sensor[sensor.home_ozone-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'Data provided by Airly',
      'device_class': 'ozone',
      'friendly_name': 'Home Ozone',
      'limit': 100,
      'percent': 42,
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': 'µg/m³',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.home_ozone',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '41.52',
  })
# ---
# name: test_sensor[sensor.home_pm1-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.home_pm1',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'name': None,
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 0,
      }),
    }),
    'original_device_class': <SensorDeviceClass.PM1: 'pm1'>,
    'original_icon': None,
    'original_name': 'PM1',
    'platform': 'airly',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '123-456-pm1',
    'unit_of_measurement': 'µg/m³',
  })
# ---
# name: test_sensor[sensor.home_pm1-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'Data provided by Airly',
      'device_class': 'pm1',
      'friendly_name': 'Home PM1',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': 'µg/m³',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.home_pm1',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '2.83',
  })
# ---
# name: test_sensor[sensor.home_pm10-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.home_pm10',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'name': None,
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 0,
      }),
    }),
    'original_device_class': <SensorDeviceClass.PM10: 'pm10'>,
    'original_icon': None,
    'original_name': 'PM10',
    'platform': 'airly',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '123-456-pm10',
    'unit_of_measurement': 'µg/m³',
  })
# ---
# name: test_sensor[sensor.home_pm10-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'Data provided by Airly',
      'device_class': 'pm10',
      'friendly_name': 'Home PM10',
      'limit': 45,
      'percent': 14,
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': 'µg/m³',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.home_pm10',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '6.06',
  })
# ---
# name: test_sensor[sensor.home_pm2_5-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.home_pm2_5',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'name': None,
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 0,
      }),
    }),
    'original_device_class': <SensorDeviceClass.PM25: 'pm25'>,
    'original_icon': None,
    'original_name': 'PM2.5',
    'platform': 'airly',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '123-456-pm25',
    'unit_of_measurement': 'µg/m³',
  })
# ---
# name: test_sensor[sensor.home_pm2_5-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'Data provided by Airly',
      'device_class': 'pm25',
      'friendly_name': 'Home PM2.5',
      'limit': 15,
      'percent': 29,
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': 'µg/m³',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.home_pm2_5',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '4.37',
  })
# ---
# name: test_sensor[sensor.home_pressure-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.home_pressure',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'name': None,
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 0,
      }),
    }),
    'original_device_class': <SensorDeviceClass.PRESSURE: 'pressure'>,
    'original_icon': None,
    'original_name': 'Pressure',
    'platform': 'airly',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '123-456-pressure',
    'unit_of_measurement': <UnitOfPressure.HPA: 'hPa'>,
  })
# ---
# name: test_sensor[sensor.home_pressure-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'Data provided by Airly',
      'device_class': 'pressure',
      'friendly_name': 'Home Pressure',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': <UnitOfPressure.HPA: 'hPa'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.home_pressure',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '1019.86',
  })
# ---
# name: test_sensor[sensor.home_sulphur_dioxide-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.home_sulphur_dioxide',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'name': None,
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 0,
      }),
    }),
    'original_device_class': <SensorDeviceClass.SULPHUR_DIOXIDE: 'sulphur_dioxide'>,
    'original_icon': None,
    'original_name': 'Sulphur dioxide',
    'platform': 'airly',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '123-456-so2',
    'unit_of_measurement': 'µg/m³',
  })
# ---
# name: test_sensor[sensor.home_sulphur_dioxide-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'Data provided by Airly',
      'device_class': 'sulphur_dioxide',
      'friendly_name': 'Home Sulphur dioxide',
      'limit': 40,
      'percent': 35,
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': 'µg/m³',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.home_sulphur_dioxide',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '13.97',
  })
# ---
# name: test_sensor[sensor.home_temperature-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.home_temperature',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'name': None,
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 1,
      }),
    }),
    'original_device_class': <SensorDeviceClass.TEMPERATURE: 'temperature'>,
    'original_icon': None,
    'original_name': 'Temperature',
    'platform': 'airly',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '123-456-temperature',
    'unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
  })
# ---
# name: test_sensor[sensor.home_temperature-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'Data provided by Airly',
      'device_class': 'temperature',
      'friendly_name': 'Home Temperature',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.home_temperature',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '14.37',
  })
# ---
